# Eye

./: README.md  bun.lockb  drag.html  package-lock.json  package.json
mastra/: package-lock.json  package.json
mastra/src/mastra/: index.ts
mastra/src/mastra/agents/: index.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/src/: lib.rs
src/components/: DragWindow.tsx  PopupWindow.tsx
src/components/ui/: button.tsx  input.tsx  scroll-area.tsx
src/hooks/: useDatabase.ts
workers/r2-cloud-worker/: bun.lockb  package-lock.json  package.json  wrangler.jsonc
workers/r2-cloud-worker/src/: index.ts
